# task-orchestrator

./: .dockerignore  .editorconfig  .env.example  .gitignore  .oxlintrc.json  CONTEXT.md  Dockerfile  Dockerfile.worker  README.md  biome.json  docker-compose.yml  lefthook.yml  lint.sh  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
alembic/: env.py
apps/: vite.config.ts
apps/client/: Dockerfile  components.json  index.html  nginx.conf.template  openapi-ts.config.ts  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/server/: .dockerignore  Dockerfile  Dockerfile.worker  lint.sh  main.py  package.json  pyproject.toml
docs/adr/: 0001-event-driven-dispatch-over-celery-canvas.md  0002-schedule-reruns-entire-downstream.md  0003-monorepo-client-server-workspace.md
docs/agents/: domain.md
docs/api/: openapi.json
docs/plans/: 20260601-issue-2-job-readiness-query.md  20260601-issue-3-task-dispatcher.md  20260601-issue-4-event-driven-dispatch-behind-flag.md  20260601-issue-5-reconciliation-sweep.md  20260602-issue-7-characterization-equivalence-tests.md  20260602-stop-run-and-per-task-expiry.md  20260603-issue-8-canary-flip-flag-default-delete-coercion-layer.md
src/api/: app.py  config.py  deps.py
src/domain/: job.py  jobs_repo.py  journal.py  launch.py  scope.py  scoped_task.py  task.py  tasks_repo.py
src/handlers/: demo.py  interface.py
src/services/: make_celery_chain.py  make_task_graph.py  reconciliation_sweep_service.py  task_dispatcher.py  tasks_management_service.py
tests/: conftest.py
(+181 files in other folders)
