[project]
name = "task-orchestrator"
version = "0.1.0"
description = "Task Executor / Orchestrator — DAG-based task runner with state machines and Celery dispatch"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "celery>=5.3",
    "redis>=5.0",
    "kombu>=5.3",
    "python-json-logger>=2.0",
    "tenacity>=8.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-sugar>=1.0",
    "coverage>=7.0",
    "ruff>=0.4",
    "pyright>=1.1.372",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "ANN", "C4"]
ignore = ["ANN002", "ANN003", "ANN204"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "ANN201", "ANN001"]

[tool.pyright]
pythonVersion = "3.13"
include = ["src", "tests"]
exclude = ["alembic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
relative_files = true
source = ["src"]
